--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       来之前，到之后的最匪夷所思的大差异是。。。？
     </h2>
     <h3>
-      只有我家乡1/60的面积，却有着我家乡1/4的人口。
+      槟城只有我家乡1/60的面积，却有着我家乡1/4的人口。
     </h3>
   </body>
 
