--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3>槟城，亦称槟州，是马来西亚十三个联邦州属之一，位于马来亚半岛西北侧。以槟威海峡為界，槟城分成槟岛和威省两部分，其中威省的东部和北部与吉打州为邻，南部与霹雳州为邻，而槟岛西部则与印尼苏门答腊岛隔马六甲海峡相对。</h3>
     <h2>我最喜欢的三个景点，人气目的地推荐。</h2>
     <h3>猴子沙滩
-      <img src="img1.jpg" alt="猴子沙滩"> 
+      <p> <img src="img1.jpg" alt="猴子沙滩"> </p>
       壁画街
       <img src="img2.jpg" alt="壁画街" width="35%">
       潮州会馆
